# IteraAgent

./: .env.template  .gitattributes  .gitignore  Agent Zero v7.3-v7.6 渐进式升级实施总结.md  Agent Zero v7.3-v7.6 渐进式升级计划 (修订版).md  CHANGELOG.md  COMMIT_NOW.md  CONTRIBUTING.md  FINAL_CONFIG_SUMMARY.md  INFINITE_LOOP_FIX.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  README.md  README_CN.md  app.py  app_chat.py  build_log.txt  debug_llm_response.py  debug_nodes.txt  debug_simulator.py  fast_build.py  inspect_schemas.py  inspect_schemas_v2.py  list_lc_tools.py  merge_tools.py  project_structure_and_modules.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.py  scan_all_tools.py  scan_all_tools_v2.py  scanned_tools_v2.json  setup.bat  setup.py  setup.sh  start.py  test_hybrid_routing.py  test_hybrid_simulation.py  test_report.json  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/apps/: app_backup_v2.py  app_phase5_export_only.py
archive/backup_20260118_120719/: AGENT_TEMPLATE_FIXES.md  AgentFactory_实施计划.md  COMPLETE_DEBUGGING_SUMMARY.md  PHASE6_DEBUGGING_SUMMARY.md  PHASE6_IMPLEMENTATION_STATUS.md  PM_Graph_Designer_Improved_Plan.md  PM_Graph_Designer_改进实施计划.md  Phase3_修改实施计划.md  Phase6_Runtime_Evolution_详细实施计划.md  RAG_Implementation_Plan.md  RAG_TEST_FAILURE_ANALYSIS.md  TEST_DIAGNOSTIC.md  fix_collection_name.py  phase1_summary.md  phase2_summary.md  phase3_integration_test_results.md  phase3_issues_explained.md  phase3_progress.md  phase3_summary.md  phase3_test_results_analysis.md  phase4_deepeval_optimized.md  phase4_summary.md  phase4_task_4_1_summary.md  phase4_tasks_4_4_to_4_6_summary.md  test_debug_output.py  (+5 more)
examples/: phase5_demo.py
plans/: Agent Zero v7.1 修复计划.md  Agent Zero v7.3-v7.6 渐进式升级实施总结.md  Agent Zero v7.3-v7.6 渐进式升级计划 (修订版).md  Agent_Zero v7.0 架构演进方案.md  Agent_Zero_v7.2_LLM语义路由总结.md  Agent_Zero_详细实施计划.md  v8.0_implementation_plan.md  v8.0_test_cases.md
scripts/: check_rename.py  install_dependencies.bat  install_dependencies.py  install_dependencies.sh  quick_reference.py  start_chat_ui.bat  start_chat_ui.sh  start_ui.bat  start_ui.sh
src/: __init__.py
tests/: test_graph_fallback.py  test_plan_execute_routing.py  test_selector_llm.py  test_simulator_tools.py
(+163 files in other folders)
